src/parser/snapshots/crochet__parser__tests__blocks-5.snap
---
source: src/parser/mod.rs
expression: "parse(\"let foo = {let x = 5; console.log(x); x}\")"
---
Program {
    body: [
        VarDecl {
            span: 0..40,
            comments: None,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Let(
                    Let {
                        span: 15..39,
                        pattern: Some(
                            Ident(
                                BindingIdent {
                                    span: 15..16,
                                    id: Ident {
                                        span: 15..16,
                                        name: "x",
                                    },
                                    type_ann: None,
                                },
                            ),
                        ),
                        init: Lit(
                            Num(
                                Num {
                                    span: 19..20,
                                    value: "5",
                                },
                            ),
                        ),
                        body: Let(
                            Let {
                                span: 22..39,
                                pattern: None,
                                init: App(
                                    App {
                                        span: 22..36,
                                        lam: Member(
                                            Member {
                                                span: 22..33,
                                                obj: Ident(
                                                    Ident {
                                                        span: 22..29,
                                                        name: "console",
                                                    },
                                                ),
                                                prop: Ident(
                                                    Ident {
                                                        span: 29..33,
                                                        name: "log",
                                                    },
                                                ),
                                            },
                                        ),
                                        args: [
                                            Ident(
                                                Ident {
                                                    span: 34..35,
                                                    name: "x",
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                body: Ident(
                                    Ident {
                                        span: 38..39,
                                        name: "x",
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ),
            declare: false,
        },
    ],
}
