src/parser/snapshots/crochet__parser__tests__comments-2.snap
---
source: src/parser/mod.rs
expression: "parse(r#\"\n        // x is 5\n        // y is 10\n        let p = {x: 5, y: 10}\n        \"#)"
---
Program {
    body: [
        VarDecl {
            span: 9..76,
            comments: Some(
                [
                    Comment {
                        span: 9..27,
                        text: " x is 5",
                    },
                    Comment {
                        span: 27..46,
                        text: " y is 10",
                    },
                ],
            ),
            pattern: Ident(
                BindingIdent {
                    span: 50..51,
                    id: Ident {
                        span: 50..51,
                        name: "p",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Obj(
                    Obj {
                        span: 54..76,
                        props: [
                            KeyValue(
                                KeyValueProp {
                                    span: 55..59,
                                    name: "x",
                                    value: Lit(
                                        Num(
                                            Num {
                                                span: 58..59,
                                                value: "5",
                                            },
                                        ),
                                    ),
                                },
                            ),
                            KeyValue(
                                KeyValueProp {
                                    span: 61..66,
                                    name: "y",
                                    value: Lit(
                                        Num(
                                            Num {
                                                span: 64..66,
                                                value: "10",
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ],
                    },
                ),
            ),
            declare: false,
        },
    ],
}
