src/parser/snapshots/crochet__parser__tests__declarations-3.snap
---
source: src/parser/mod.rs
expression: "parse(\"let foo = {let x = 5; x}\")"
---
Program {
    body: [
        VarDecl {
            span: 0..24,
            comments: None,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Let(
                    Let {
                        span: 15..23,
                        pattern: Some(
                            Ident(
                                BindingIdent {
                                    span: 15..16,
                                    id: Ident {
                                        span: 15..16,
                                        name: "x",
                                    },
                                    type_ann: None,
                                },
                            ),
                        ),
                        init: Lit(
                            Num(
                                Num {
                                    span: 19..20,
                                    value: "5",
                                },
                            ),
                        ),
                        body: Ident(
                            Ident {
                                span: 22..23,
                                name: "x",
                            },
                        ),
                    },
                ),
            ),
            declare: false,
        },
    ],
}
