src/parser/snapshots/crochet__parser__tests__declarations.snap
---
source: src/parser/mod.rs
expression: "parse(\"let x = 5\")"
---
Program {
    body: [
        VarDecl {
            span: 0..9,
            comments: None,
            pattern: Ident(
                BindingIdent {
                    span: 4..5,
                    id: Ident {
                        span: 4..5,
                        name: "x",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lit(
                    Num(
                        Num {
                            span: 8..9,
                            value: "5",
                        },
                    ),
                ),
            ),
            declare: false,
        },
    ],
}
